--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "gulp-size": "~0.3.1",
     "gulp-replace": "~0.3.0",
     "gulp-bump": "*",
-    "gulp-mocha-phantomjs": "~0.2.2"
+    "gulp-mocha-phantomjs": "0.10.1"
   }
 }
